port lib to esp32

--- a/platformio.ini
+++ b/platformio.ini
@@ -1,7 +1,7 @@
 [platformio]
 src_dir = ./Arduino/McLighting/
 data_dir = ./Arduino/McLighting/data/
-env_default = nodemcuv2
+env_default = eps32dev
 description = The ESP8266 based multi-client lighting gadget
 
 [common]
@@ -37,14 +37,11 @@ board_build.flash_mode = dout
 upload_speed = 115200
 upload_resetmethod = nodemcu
 lib_deps =
-  WiFiManager@0.14
   AsyncMqttClient
   ArduinoJson
   WS2812FX
   NeoPixelBus
   WebSockets
-  ESPAsyncE131
-  ESPAsyncUDP
   ;PubSubClient ;neede for #define ENABLE_MQTT
   ;FastLED      ;needed for #define CUSTOM_WS2812FX_ANIMATIONS
 targets_eum = erase, upload, monitor
@@ -72,4 +69,15 @@ monitor_speed = ${common.monitor_speed}
 upload_speed = ${common.upload_speed}
 upload_resetmethod = ${common.upload_resetmethod}
 board_build.flash_mode = dout
+lib_deps = ${common.lib_deps}
+
+[env:eps32dev]
+platform = espressif32
+board = esp32dev
+framework = ${common.framework}
+build_flags = 
+  ${common.build_flags}
+  ; -Wl,-Teagle.flash.4m3m.ld  ;;;; Required for core > v2.5.0 or staging version
+monitor_speed = ${common.monitor_speed}
+upload_speed = ${common.upload_speed}
 lib_deps = ${common.lib_deps}
